# runyard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/: package.json  vite.config.js
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/routes/: +layout.svelte  +page.svelte
apps/mobile/: README.md
apps/web/: README.md
crates/runyard-acp/: Cargo.toml
crates/runyard-acp/src/: client.rs  commands.rs  discovery.rs  error.rs  events.rs  lib.rs  mock_agent.rs  pool.rs  transport.rs  updates.rs
crates/runyard-acp/tests/: integration_test.rs  pool_test.rs  unit_test.rs
crates/runyard-core/: Cargo.toml
crates/runyard-core/src/: acp_agent_db.rs  acp_bridge.rs  acp_registry.rs  agent_tasks_db.rs  chat_db.rs  git_ops.rs  keychain.rs  lib.rs  lsp_manager.rs  mcp_server_db.rs  notes_db.rs  sandbox.rs  settings.rs  skills_db.rs  terminal.rs  workspace.rs
crates/subservice/: Cargo.toml  build.rs
crates/subservice/src/: main.rs
scratch/runyard-demo-project/: README.md  main.js  styles.css
tmp/: registry_downloaded.json  runyard-chat-panel-specification.md  runyard-design-guidelines-v2.html  runyard-engineering-todo-v2.md  runyard-protocol-research-reference.md
