[package]
name = "runyard-acp"
version = "0.1.0"
edition = "2021"
description = "Runyard's ACP (Agent Client Protocol) client - Tauri-free by design so it can be built and tested independently of the desktop GUI stack."

[dependencies]
agent-client-protocol = "1"
agent-client-protocol-tokio = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
# Cross-platform PATH executable lookup for agent discovery (1.6.2). Already
# an existing dependency of runyard-core at the same version, so this isn't a
# new library to the workspace as a whole - just made directly nameable here
# too, so the discovery engine can live in this (testable) crate.
which = "6"
# Atomic file writes for the fs/write_text_file IDE tool handler (1.7.11).
# tempfile is already used by runyard-core at the same version.
tempfile = "3"
# Cross-platform argv quoting for discovery's recommended spawn commands.
# Already a transitive dependency via agent-client-protocol-tokio (which
# uses it to parse spawn commands back apart) - made directly nameable so
# discovery.rs can build correctly-quoted commands without duplicating that
# logic or risking a version mismatch between the two crates' parsers.
shell-words = "1"

# HTTP/WebSocket transports (1.7.3/1.7.4) are deferred: the protocol itself
# lists them as Draft RFD status (not yet stabilized), and their TLS stack
# (ring, via rustls) hits an unrelated Zig/cc-rs target-triple incompatibility
# in this build environment. Stdio is the stable/default transport and covers
# every agent in the supported-agents list, so it is not blocked on this.

[dev-dependencies]
tokio-test = "0.4"

[features]
test-utils = []

[[bin]]
name = "mock-agent-bin"
path = "src/bin/mock_agent_bin.rs"
required-features = ["test-utils"]
