[package]
name = "runyard-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = "2.2"
serde = { version = "1.0", features = ["derive"] }
notify = "8.2"
git2 = "0.20"
serde_json = "1.0"
tempfile = "3.10"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
which = "6"
